force-app/main/default/objects/Safra__c/Safra__c.object-meta.xml
<CustomObject>
    <label>Safra</label>
    <nameField>
        <label>Safra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Safras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>