force-app/main/default/objects/Safra__c/fields/BillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>BillingStartDate__c</fullName>
    <label>Data Inicio Faturament</label>
    <required>true</required>
    <type>Date</type>
</CustomField>