force-app/main/default/objects/Safra__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código da Safra</label>
    <length>180</length>
    <type>Text</type>
</CustomField>