force-app/main/default/objects/Safra__c/fields/DataFim__c.field-meta.xml
<CustomField>
    <fullName>DataFim__c</fullName>
    <label>Data Fim</label>
    <type>Date</type>
</CustomField>