force-app/main/default/objects/Safra__c/fields/EndDateInsertionOrders__c.field-meta.xml
<CustomField>
    <fullName>EndDateInsertionOrders__c</fullName>
    <label>Data Fim Inserção Pedidos</label>
    <type>Date</type>
</CustomField>