force-app/main/default/objects/Safra__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Nome da Safra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>