force-app/main/default/objects/Safra__c/fields/NumberOfDaysAfterPayment__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysAfterPayment__c</fullName>
    <label>Quantidade de Dias Após Pagamento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>