force-app/main/default/objects/Safra__c/fields/PaymentBaseDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentBaseDate__c</fullName>
    <label>Data Base Pagamento</label>
    <type>Date</type>
</CustomField>