force-app/main/default/objects/Safra__c/fields/ReleaseStatus__c.field-meta.xml
<CustomField>
    <fullName>ReleaseStatus__c</fullName>
    <label>Status Liberação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>