force-app/main/default/objects/Safra__c/fields/StartDateOrderInsertion__c.field-meta.xml
<CustomField>
    <fullName>StartDateOrderInsertion__c</fullName>
    <label>Data Inicio Inserção Pedidos</label>
    <required>true</required>
    <type>Date</type>
</CustomField>